--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html {
+  height: 100%;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -28,7 +32,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 h1 {
@@ -53,6 +57,20 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+footer {
+  margin-top: 9rem;
+  font-weight: bold;
+}
+
+.footer_items {
+  display: flex;
+  place-items: center;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 0.5rem;
 }
 
 @media (prefers-color-scheme: light) {
