--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,13 @@ footer {
   margin-top: 0.5rem;
 }
 
+span {
+  text-decoration: underline;
+  text-decoration-style: wavy;
+  text-decoration-color: #535bf2;
+  color: #535bf2;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
